--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.11-slim
+FROM python:3.11
 WORKDIR /app
-COPY main.py .
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 CMD ["python", "main.py"]
