--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.11
-WORKDIR /app
+WORKDIR /node
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+ENV PYTHONPATH=/
 CMD ["python", "main.py"]
