--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11
 WORKDIR /node
-COPY requirements.txt .
+COPY ./requirements.txt /node/requirements.txt
 RUN pip install -r requirements.txt
-ENV PYTHONPATH=/
+ENV PYTHONPATH=/node
 CMD ["python", "main.py"]
